# cognucart

./: .gitignore  CLAUDE.md  CMakeLists.txt  MARKETPLACE.md  NEWS  README.md
.github/agents/: README.md  cogfin-expert.md
.github/workflows/: ci-tests.yml  mac-tests.yaml
bindings/: core-utils.i  engine.i
bindings/guile/: CMakeLists.txt  core-utils.scm  gnc-engine-guile.cpp  gnc-engine-guile.h  gnc-optiondb.i
bindings/guile/test/: srfi64-extras.scm  test-core-utils.scm  test-gnc-option-scheme-output.scm  test-gnc-optiondb.scm
bindings/python/: gnucash_core.py
bindings/python/tests/: test_business.py
borrowed/: CMakeLists.txt
borrowed/chartjs-2/: CMakeLists.txt
borrowed/chartjs-4/: CMakeLists.txt
changelogs/: ChangeLog.2024
cmake/: cmake_uninstall.cmake.in
common/: base-typemaps.i  config.h.cmake.in
common/cmake_modules/: GncAddSchemeTargets.cmake
docs/: README.dependencies  REORGANIZATION.md
gnucash/: CMakeLists.txt  gnucash-cli.cpp  gnucash-commands.cpp  gnucash.css
gnucash/gnome/: assistant-loan.cpp  assistant-stock-transaction.cpp  dialog-billterms.c  dialog-commodities.cpp  dialog-invoice.c  dialog-payment.c  dialog-price-editor.c  dialog-print-check.c  dialog-sx-editor.c  dialog-sx-from-trans.cpp  dialog-tax-info.c  gnc-plugin-page-account-tree.cpp  gnc-plugin-page-register.cpp  gnc-plugin-page-report.cpp  reconcile-view.c  reconcile-view.h  window-autoclear.c  window-reconcile.cpp
gnucash/gnome-utils/: CMakeLists.txt  account-quickfill.c  dialog-account.c  dialog-commodity.cpp  dialog-file-access.c  dialog-preferences.c  dialog-query-view.c  dialog-query-view.h  dialog-utils.c  gnc-component-manager.c  gnc-component-manager.h  gnc-date-edit.c  gnc-file.c  gnc-file.h  gnc-gui-query.c  gnc-main-window.cpp  gnc-option-gtk-ui.cpp  gnc-query-view.c  gnc-query-view.h  gnc-sx-list-tree-model-adapter.c  gnc-sx-list-tree-model-adapter.h  gnc-tree-model-account.c  gnc-tree-view-commodity.c  gnc-tree-view-commodity.h  gnc-tree-view-sx-list.c  gnc-ui.h  search-param.c
gnucash/gnome-utils/test/: CMakeLists.txt
gnucash/gnome/test/: gtest-assistant-stock-transaction.cpp
gnucash/gschemas/: org.gnucash.GnuCash.dialogs.gschema.xml.in  org.gnucash.GnuCash.dialogs.reconcile.gschema.xml.in
gnucash/gtkbuilder/: assistant-csv-export.glade  assistant-loan.glade  assistant-stock-transaction.glade  dialog-account.glade  dialog-commodities.glade  dialog-preferences.glade  dialog-tax-info.glade  gnc-plugin-page-register.glade
gnucash/import-export/: import-backend.cpp  import-main-matcher.cpp
gnucash/import-export/aqb/: gnc-ab-utils.c
gnucash/import-export/bi-import/: dialog-bi-import.c  gnc-plugin-bi-import.c
gnucash/import-export/csv-exp/: assistant-csv-export.c
gnucash/import-export/csv-imp/: csv-account-import.c  gnc-imp-props-tx.cpp  gnc-import-tx.cpp
gnucash/import-export/customer-import/: dialog-customer-import.c  gnc-plugin-customer-import.c
gnucash/import-export/qif-imp/: assistant-qif-import.c  qif-to-gnc.scm
gnucash/import-export/test/: CMakeLists.txt  gtest-import-account-matcher.cpp  gtest-import-backend.cpp
gnucash/register/ledger-core/: split-register-control.cpp  split-register-copy-ops.c  (+3 more)
gnucash/report/: gnc-report.cpp  gnc-report.h  html-chart.scm  html-utilities.scm  report-core.scm  report-utilities.scm  trep-engine.scm
gnucash/ui/: gnc-reconcile-window.ui
libgnucash/: CMakeLists.txt
libgnucash/app-utils/: CMakeLists.txt  gnc-autoclear.cpp  gnc-autoclear.h  gnc-gsettings.cpp  gnc-quotes.cpp  gnc-ui-balances.h
libgnucash/core-utils/: CMakeLists.txt  gnc-environment.c  gnc-filepath-utils.cpp  gnc-locale-utils.c  gnc-locale-utils.cpp  gnc-prefs.cpp  gnc-unicode.cpp  gnc-unicode.h
libgnucash/engine/: Account.cpp  Account.h  Account.hpp  Recurrence.cpp  Scrub.cpp  Split.cpp  TransLog.cpp  Transaction.cpp  gnc-commodity.cpp  gnc-commodity.h  gnc-commodity.hpp  gnc-date.cpp  gnc-datetime.cpp  gnc-euro.cpp  gnc-lot.cpp  gnc-numeric.cpp  gnc-option-date.cpp  gnc-option-date.hpp  gnc-optiondb.cpp  gnc-pricedb.cpp  gnc-timezone.cpp  gncTaxTable.c  guid.cpp  iso-4217-currencies.xml  qofinstance.cpp  qoflog.cpp  qofobject.cpp  qofsession.cpp
libgnucash/marketplace/: API.md  CMakeLists.txt  INTEGRATION.md  README.md  customer.cpp  customer.hpp  inventory.cpp  inventory.hpp  marketplace_engine.cpp  marketplace_engine.hpp  marketplace_types.hpp  order.cpp  order.hpp  product.cpp  product.hpp  storefront.cpp  storefront.hpp
libgnucash/marketplace/examples/: CMakeLists.txt  marketplace_demo.cpp
libgnucash/marketplace/test/: CMakeLists.txt  gtest-marketplace.cpp
libgnucash/opencog/: CMakeLists.txt  README.md
libgnucash/opencog/aten/: tensor.hpp  tensor_ops.hpp
libgnucash/opencog/atenspace/: atenspace.hpp  tensor_atom.hpp
libgnucash/opencog/atomspace/: atom.hpp  atom_types.hpp  atomspace.hpp  truth_value.hpp
libgnucash/opencog/cogutil/: concurrent_queue.hpp  counter.hpp  logger.hpp
libgnucash/opencog/gnc-cognitive/: cognitive_engine.cpp  cognitive_engine.hpp
libgnucash/opencog/pattern/: pattern_match.hpp
libgnucash/opencog/tensor-logic/: tensor_account.hpp  tensor_logic_engine.hpp  tensor_network.hpp
libgnucash/opencog/test/: CMakeLists.txt  gtest-aten-exhaustive.cpp  gtest-aten.cpp  gtest-atenspace-exhaustive.cpp  gtest-atenspace.cpp  gtest-atomspace-exhaustive.cpp  gtest-atomspace.cpp  gtest-cognitive-engine.cpp  gtest-cognitive-exhaustive.cpp  gtest-cogutil.cpp  gtest-pattern-exhaustive.cpp  gtest-pattern-match.cpp  gtest-tensor-logic-exhaustive.cpp  gtest-tensor-logic.cpp
libgnucash/tax/: gnc-locale-tax.c
po/: POTFILES.in  ar.po  as.po  az.po  bg.po  brx.po  ca.po  cs.po  da.po  de.po  doi.po  el.po  en_AU.po  en_GB.po  en_NZ.po  es.po  es_NI.po  et.po  eu.po  fa.po  fi.po  fr.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  kok.po  kok@latin.po  ks.po  lt.po  lv.po  mai.po  mk.po  mni.po  (+22 more)
po/glossary/: ar.po  bg.po  da.po  es.po  fr.po  hr.po  hu.po  mk.po  mr.po  nb.po  nl.po  pt.po  ro.po  ru.po  sk.po  ta.po  tr.po  zh_CN.po
util/: extract-translators.pl  gnc-vcs-info
(+98 files in other folders)
